@@ -36,8 +36,6 @@ import org.springframework.web.server.WebFilter;
 import org.springframework.web.server.WebFilterChain;
 import reactor.core.publisher.Mono;
 
-import java.util.stream.Collectors;
-
 public class WebFluxLogFilter implements WebFilter, Ordered {
     final Logger log = LoggerFactory.getLogger(WebFluxLogFilter.class);
 
@@ -59,13 +57,13 @@ public class WebFluxLogFilter implements WebFilter, Ordered {
                         .getHeaders()
                         .entrySet()
                         .stream()
-                        .collect(Collectors.toList()));
+                        .toList());
                 log.info("Response: {}", exchange.getResponse().getStatusCode());
                 log.info("Response Headers: {}", exchange.getResponse()
                         .getHeaders()
                         .entrySet()
                         .stream()
-                        .collect(Collectors.toList()));
+                        .toList());
                 log.info("\n:: End Request Log ::");
             }
         });
